--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
+
 }
-body{
+
+body {
     font-family: 'Poppins', sans-serif;
     background: #210e4e;
     color: #333;
@@ -13,7 +14,8 @@ body{
     padding-bottom: 100px;
 
 }
-.app{
+
+.app {
     background: #fff;
     width: 90%;
     max-width: 600px;
@@ -22,22 +24,25 @@ body{
     padding: 30px;
 
 }
-.app h1{
+
+.app h1 {
     font-size: 25px;
     color: #001e4d;
     font-weight: 600;
     border-bottom: 1px solid #333;
     padding-bottom: 30px;
 }
-.quiz{
+
+.quiz {
     padding: 20px 0;
 }
-.quiz h2{
+
+.quiz h2 {
     font-size: 18px;
     color: #001e4d;
 }
 
-.btn{
+.btn {
     background: #fff;
     color: #222;
     font-weight: 500;
@@ -50,14 +55,17 @@ body{
     cursor: pointer;
     transition: all 0.3s;
 }
-.btn:hover:not([disabled]){
+
+.btn:hover:not([disabled]) {
     background: #222;
     color: #fff;
 }
-.btn:disabled{
+
+.btn:disabled {
     cursor: no-drop;
 }
-#next-btn{
+
+#next-btn {
     background: #001e4d;
     color: #fff;
     font-weight: 500;
@@ -70,20 +78,22 @@ body{
     display: none;
 }
 
-.correct{
+.correct {
     background: #9aeabc;
 }
-.incorrect{
+
+.incorrect {
     background: #ff9393;
 }
-@media screen and (max-width: 768px)
-{
-    body{
-       width: 100%;
+
+@media screen and (max-width: 768px) {
+    body {
+        width: 100%;
         height: 85vh;
-        
+
     }
-    .app{
+
+    .app {
         width: 95%;
         display: flex;
         align-items: center;
@@ -92,8 +102,9 @@ body{
         height: 110%;
         padding-bottom: 10px;
     }
-    footer a{
+
+    footer a {
         display: none;
     }
-    
+
 }
